--- a/structures of data/structures of data.vcxproj
+++ b/structures of data/structures of data.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="one-way_list.c" />
+    <ClCompile Include="two-way_list.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
